info about setting up windows using docker

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 
-#compiled code
+#compiled code -- leave in for now
 
-*.lcom
-*.LCOM
-*.dfasl
-*.DFASL
+# *.lcom
+# *.LCOM
+# *.dfasl
+# *.DFASL
 
 # older versions
 
