--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,16 @@
 # *.DFASL
 
 # older versions
-# leave in for now
-# *~
-# *\#
-# \.#*
-# *#
+
+*~
+
+# emacs detritus
+*\#
+\.\#*
 
 # core files
 
 core
 
+# Mac OS detritus
 .DS_Store
